port to JDK25